<resources>
    <string name="app_name">Notes And Passwords</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_generate">Generate</string>
    <string name="menu_passwords">Passwords</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_save_password">Save Password</string>
</resources>