<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/post_add_black_24dp"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_passwords"
            android:icon="@drawable/password_black_24dp"
            android:title="@string/menu_passwords" />
        <item
            android:id="@+id/nav_generate"
            android:icon="@drawable/enhanced_encryption_black_24dp"
            android:title="@string/menu_generate"/>
        <item
            android:id="@+id/nav_save_password"
            android:icon="@drawable/add_circle_outline_black_24dp"
            android:title="@string/menu_save_password"/>

    </group>
</menu>